# Meeps

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: build-and-test.yml
src/: CMakeLists.txt  common.h  cop0.h  r3000.h  r3000interpreter.h  state.h  types.h
tests/: CMakeLists.txt  test_cop0.h  test_instructions.cpp  test_main.cpp  test_memory.cpp  test_memory.h  unicorn_emu.h
